...
)

private val mockWhitelistContacts = listOf(
    WhitelistEntry("Amisha", "+91 7622365663", false),
    WhitelistEntry("Bunty", "+91 7622365663", false),
    WhitelistEntry("Mom", "+91 9876543210", true),
    WhitelistEntry("Dad", "+91 9876543211", true),
    WhitelistEntry("Chirag Bansal", "+91 7622365663", false)
)

@Composable
fun WhitelistScreen(
    onBackClick: () -> Unit = {}
...
